--- a/GDScript/export_presets.cfg
+++ b/GDScript/export_presets.cfg
@@ -42,7 +42,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../Desktop/Sebastian/Godot Documents/Conway's Game of Life/Exports/220922/win10/Conway-s-Game-Of-Life.exe"
+export_path="../../../../Desktop/Sebastian/Godot Documents/Conway's Game of Life/Exports/Sept22/GDScript/Conway-s-Game-Of-Life.exe"
 script_export_mode=1
 script_encryption_key=""
 
@@ -51,7 +51,7 @@ script_encryption_key=""
 custom_template/debug=""
 custom_template/release=""
 binary_format/64_bits=true
-binary_format/embed_pck=false
+binary_format/embed_pck=true
 texture_format/bptc=false
 texture_format/s3tc=true
 texture_format/etc=false
